--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,66 @@
+// Custom Theming for Angular Material
+// For more information: https://material.angular.io/guide/theming
+@import url("https://fonts.googleapis.com/css2?family=Lobster&family=Orbitron:wght@500&family=Spartan:wght@100;300;600&family=Catamaran:wght@400;500&family=Lato:wght@400;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Bungee&family=Bungee+Hairline&family=Bungee+Inline&family=Bungee+Outline&family=Bungee+Shade&display=swap");
+@import "~@angular/material/theming";
+
+// Plus imports for other components in your app.
+
+// Include the common styles for Angular Material. We include this here so that you only
+// have to load a single css file for Angular Material in your app.
+// Be sure that you only ever include this mixin once!
+@include mat-core();
+
+// Define the palettes for your theme using the Material Design palettes available in palette.scss
+// (imported above). For each palette, you can optionally specify a default, lighter, and darker
+// hue. Available color palettes: https://material.io/design/color/
+$lustys-portfolio-primary: mat-palette($mat-light-blue, 400);
+$lustys-portfolio-accent: mat-palette($mat-cyan, A700, A400);
+
+// The warn palette is optional (defaults to red).
+$lustys-portfolio-warn: mat-palette($mat-red);
+
+// Create the theme object. A theme consists of configurations for individual
+// theming systems such as "color" or "typography".
+$lustys-portfolio-theme: mat-light-theme(
+  (
+    color: (
+      primary: $lustys-portfolio-primary,
+      accent: $lustys-portfolio-accent,
+      warn: $lustys-portfolio-warn,
+    ),
+  )
+);
+
+// Include theme styles for core and each component used in your app.
+// Alternatively, you can import and @include the theme mixins for each component
+// that you are using.
+@include angular-material-theme($lustys-portfolio-theme);
+
 /* You can add global styles to this file, and also import other style files */
+
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Spartan, "Helvetica Neue", sans-serif;
+  // overflow: hidden;
+
+}
+
+header {
+  height: 3em;
+  nav {
+    display: flex;
+    justify-content: flex-end;
+    padding: 10px 40px;
+
+    li {
+      font-size: 18px;
+      margin: 0 10px;
+      display: inline-block;
+    }
+  }
+}
