--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -1,3 +1,18 @@
-<div class="about-header">
-    <p>Hi! I'm Akpos</p>
+<div id="about" class="body">
+    <header>
+        <h1>Hi! I'm Akpos</h1>
+    </header>
+
+    <div class="content">
+        <p>My name is Akposibruke David </p><br>
+        <p>I go by a lot of names...I go by <span>"Edge God"</span>, <span>"Edge Kami"</span>, <span>"Akpos"</span> and
+            <span>"LustyKami"</span>. Lusty9 is my favourite and is the brand I go by</p>
+
+        <h1>What I do</h1>
+        <p>I am a Web developer and Graphics designer with experience making all types of websites from business sites
+            and online stores to personal portfolios and business homepages. </p>
+        <p>Apart from my skills as a web developer I also have experience building mobile applications using Java as
+            well as <a href="http://flutter.dev" target="_blank" rel="noopener noreferrer">Google's Flutter SDK for
+                building cross platform applications</a> and I am also experienced in UI/UX design</p>
+    </div>
 </div>
