--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,36 +1,2 @@
-<div class="body">
-
-  <!--Top elbow-->
-  <div class="bracket-top">
-    <img src="../assets/SVG/top-bracket.svg" alt="top-bracket">
-  </div>
-
-  <!--Log/Brand-->
-  <div class="mark">
-    <img src="../assets/SVG/center-image.svg" alt="lusty9 logo">
-  </div>
-
-  <!--自己初回-->
-  <div class="tagline">
-    <p>Web developer and</p>
-    <p>Graphics designer</p>
-  </div>
-
-  <!--Bottom nav balls-->
-  <div class="navi">
-    <ul>
-      <li matTooltip="Home" matTooltipPosition="left" ><a href="#"><img
-            src="../assets/SVG/green-ball.svg" alt="home indicator"></a></li>
-      <li matTooltip="About" matTooltipPosition="left" matTooltipTouchGestures="on"><a href="#"> <img
-            src="../assets/SVG/red-ball.svg" alt="home indicator"></a></li>
-      <li matTooltip="Projects" matTooltipPosition="left" matTooltipTouchGestures="on"><a href="#"><img
-            src="../assets/SVG/indigo-ball.svg" alt="home indicator" (click)="navi()"></a></li>
-    </ul>
-  </div>
-
-  <!--Bottom elbow-->
-  <div class="bracket-bottom">
-    <img src="../assets/SVG/bottom-bracket.svg" alt="bottom-bracket">
-  </div>
-</div>
 <router-outlet></router-outlet>
+<app-about-me></app-about-me>
