--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -6,7 +6,8 @@
     <div class="content">
         <p>My name is Akposibruke David </p><br>
         <p>I go by a lot of names...I go by <span>"Edge God"</span>, <span>"Edge Kami"</span>, <span>"Akpos"</span> and
-            <span>"LustyKami"</span>. Lusty9 is my favourite and is the brand I go by</p>
+            <span>"LustyKami"</span>. Lusty9 is my favourite and is the brand I go by
+        </p>
 
         <h1>What I do</h1>
         <p>I am a Web developer and Graphics designer with experience making all types of websites from business sites
@@ -14,5 +15,22 @@
         <p>Apart from my skills as a web developer I also have experience building mobile applications using Java as
             well as <a href="http://flutter.dev" target="_blank" rel="noopener noreferrer">Google's Flutter SDK for
                 building cross platform applications</a> and I am also experienced in UI/UX design</p>
+        <h1>Socials</h1>
+        <p>These are my social and work accounts, I hope we can communicate soon...</p>
+        <div class="socials">
+            <div class="glass">
+                <p>GitHub</p>
+                <img src="" alt="">
+                <p>@AkposCodex</p>
+            </div>
+            <div class="glass">
+                <p>Twitter</p>
+                <p>@EdgeKami</p>
+            </div>
+            <div class="glass">
+                <p>LinkedIn</p>
+                <p>Akposibruke David</p>
+            </div>
+        </div>
     </div>
 </div>
