--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -1,4 +1,5 @@
 @import "../../assets/shared.scss";
+@import "../../assets/media-query.scss";
 
 .body {
     display: inline-block;
@@ -16,6 +17,9 @@
             height: max-content;
             padding-left: 0.5em;
             line-height: 1em;
+            @include xs {
+                font-size: 3rem;
+            }
         }
 
         h1::before {
@@ -52,35 +56,43 @@
 
     .glass {
         background: rgba($color: rgb(226, 220, 220), $alpha: 0.4);
-        backdrop-filter: blur(40px);
+        backdrop-filter: blur(10px);
         margin: 0 2em;
         border-radius: 10%;
         text-align: center;
+        @include xs{
+            margin: 0 1em;
+        }
 
         p {
             margin-bottom: 1em;
             display: block;
             font-size: 2rem;
+            @include xs{
+                font-size: 1.3rem;
+            }
         }
 
         svg {
-            width: 150px;
+            width: 50%;
             margin: auto;
         }
         img {
-            width: 150px;
+            width: 50%;
             margin: auto;
         }
     }
 
     .socials {
         display: grid;
-        width: 100%;
+        width: 90%;
         height: max-content;
+        margin: auto;
         background: url(../../assets/SVG/center-image.svg);
         background-position: center;
         background-repeat: no-repeat;
         background-size: 70%;
         grid-template-columns: 1fr 1fr 1fr;
+        overflow: scroll;
     }
 }
