--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,28 +1,32 @@
 @import "../../assets/shared.scss";
+@import "../../assets/media-query.scss";
 
 .body {
     color: white;
-    width: 100%;
-    height: min-content;
+    width: 100vw;
+    height: max-content;
     position: relative;
     background: black;
 
     .bracket-top {
         position: absolute;
-        width: $bracket;
+        width: 15%;
         height: auto;
         padding: 16px;
         top: 16px;
         left: 16px;
+        @include xs {
+            width: 10%;
+        }
     }
 
     .mark {
-        padding: 2.5% 0;
+        padding: 3% 0;
         width: 100%;
         display: flex;
         align-self: center;
         justify-self: center;
-        svg {
+        img {
             margin: auto;
             width: 64.2%;
             height: auto;
@@ -35,6 +39,9 @@
         line-height: 1em;
         color: white;
         display: inline-block;
+        @include xs {
+            font-size: 25px;
+        }
     }
 
     .navi {
@@ -54,6 +61,10 @@
                 img {
                     margin: 5px 8px;
                     width: 25px;
+
+                    @include xs {
+                        width: 20px;
+                    }
                 }
             }
         }
@@ -61,11 +72,14 @@
 
     .bracket-bottom {
         position: absolute;
-        width: $bracket;
+        width: 15%;
         height: auto;
         padding: 16px;
         bottom: 16px;
         right: 16px;
         z-index: 1;
+        @include xs {
+            width: 10%;
+        }
     }
 }
