update to about-me layout

--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -4,9 +4,9 @@
     </header>
 
     <div class="content">
-        <p>My name is Akposibruke David </p><br>
+        <p>My name is Akposibruke David. </p><br>
         <p>I go by a lot of names...I go by <span>"Edge God"</span>, <span>"Edge Kami"</span>, <span>"Akpos"</span> and
-            <span>"LustyKami"</span>. Lusty9 is my favourite and is the brand I go by
+            <span>"LustyKami"</span>. Lusty9 is my favourite and is the brand I go by.
         </p>
 
         <h1>What I do</h1>
@@ -14,7 +14,7 @@
             and online stores to personal portfolios and business homepages. </p>
         <p>Apart from my skills as a web developer I also have experience building mobile applications using Java as
             well as <a href="http://flutter.dev" target="_blank" rel="noopener noreferrer">Google's Flutter SDK for
-                building cross platform applications</a> and I am also experienced in UI/UX design</p>
+                building cross platform applications</a> and I am also experienced in UI/UX design.</p>
         <h1>Socials</h1>
         <p>These are my social and work accounts, I hope we can communicate soon...</p>
         <div class="socials">
