--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -2,10 +2,10 @@
 @import "../../assets/media-query.scss";
 
 .body {
-    display: inline-block;
+    // display: inline-block;
     padding: 2em 0;
     margin: 0;
-    width: 100%;
+    width: 100vw;
 
     header {
         height: max-content;
@@ -43,6 +43,7 @@
         width: 90%;
         padding: 1em;
         margin: auto;
+        text-align: center;
         p {
             font-family: Catamaran;
             display: inline-block;
@@ -52,8 +53,9 @@
         }
 
         h1 {
-            padding: 1em 0.5em;
+            padding: 0.5em;
             font-weight: 600;
+            font-size: 30px;
         }
 
         a {
@@ -64,7 +66,7 @@
     .glass {
         background: rgba($color: rgb(226, 220, 220), $alpha: 0.4);
         backdrop-filter: blur(10px);
-        margin: 0 2em;
+        margin: 0 1em;
         border-radius: 10%;
         text-align: center;
         @include xs{
@@ -74,18 +76,19 @@
         p {
             margin-bottom: 1em;
             display: block;
-            font-size: 2rem;
+            padding: 0 .8em;
+            font-size: 1.5rem;
             @include xs{
                 font-size: 1.3rem;
             }
         }
 
         svg {
-            width: 50%;
+            width: 40%;
             margin: auto;
         }
         img {
-            width: 50%;
+            width: 40%;
             margin: auto;
         }
     }
