added tools of the Trade

--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -3,7 +3,7 @@
         <h1>Hi! I'm Akpos</h1>
     </header>
 
-    <div class="content">
+    <section class="content">
         <p>My name is Akposibruke David. </p><br>
         <p>I go by a lot of names...I go by <span>"Edge God"</span>, <span>"Edge Kami"</span>, <span>"Akpos"</span> and
             <span>"LustyKami"</span>. Lusty9 is my favourite and is the brand I go by.
@@ -90,5 +90,31 @@
                 <p>Akposibruke David</p>
             </div>
         </div>
-    </div>
+    </section>
+
+    <section class="tools-section">
+        <h1>My Tools of the Trade</h1>
+        <div class="tools">
+            <div class="products">
+                <h3>These are the products and programs that help me make Wonderful websites</h3>
+                <div class="apps">
+                    <p>VS Code</p>
+                    <p>Adobe Illustrator</p>
+                    <p>Adobe XD</p>
+                    <p>Figma</p>
+                </div>
+            </div>
+            <div class="skills">
+                <h3>This is my trusty Developer Stack</h3>
+                <div class="stack">
+                    <p><i class="fab fa-html5"></i>HTML</p>
+                    <p><i class="fab fa-css3-alt"></i>CSS</p>
+                    <p><i class="fab fa-js-square"></i>JavaScript</p>
+                    <p><i class="fab fa-node-js"></i>NodeJS</p>
+                    <p><i class="fab fa-angular"></i>Angular</p>
+                    <p>Firebase</p>
+                </div>
+            </div>
+        </div>
+    </section>
 </div>
