--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -2,10 +2,11 @@
 @import "../../assets/media-query.scss";
 
 .body {
-    color: white;
+    position: relative;
     width: 100vw;
     height: max-content;
-    position: relative;
+    margin-bottom: 2em;
+    color: white;
     background: black;
 
     @include xs {
@@ -65,6 +66,7 @@
     }
 
     .tagline {
+        display: inline-block;
         padding: 1em 1em;
         font-size: 40px;
         line-height: 1em;
