updates to typography

--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -107,11 +107,11 @@
             <div class="skills">
                 <h3>This is my trusty Developer Stack</h3>
                 <div class="stack">
-                    <p><i class="fab fa-html5"></i>HTML</p>
-                    <p><i class="fab fa-css3-alt"></i>CSS</p>
-                    <p><i class="fab fa-js-square"></i>JavaScript</p>
-                    <p><i class="fab fa-node-js"></i>NodeJS</p>
-                    <p><i class="fab fa-angular"></i>Angular</p>
+                    <p><i class="fab fa-html5" style="color: #fd6529;font-size: 2em;"></i>HTML</p>
+                    <p><i class="fab fa-css3-alt" style="color: #0074b9;font-size: 2em;"></i>CSS</p>
+                    <p><i class="fab fa-js-square" style="color: #f0db4f;font-size: 2em;"></i>JavaScript</p>
+                    <p><i class="fab fa-node-js" style="color: #3c873a;font-size: 2em;"></i>NodeJS</p>
+                    <p><i class="fab fa-angular" style="color: #dd1b16;font-size: 2em;"></i>Angular</p>
                     <p>Firebase</p>
                 </div>
             </div>
