--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -92,21 +92,21 @@
         </div>
     </section>
 
-    <section class="tools-section">
+    <section id="tools-section" class="grid-section grid-display">
         <h1>My Tools of the Trade</h1>
-        <div class="tools">
-            <div class="products">
+        <div id="tools" class="grid-body">
+            <div id="products" class="grid-1">
                 <h3>These are the products and programs that help me make Wonderful websites</h3>
-                <div class="apps">
+                <div id="apps" class="subgrid">
                     <p>VS Code</p>
                     <p>Adobe Illustrator</p>
                     <p>Adobe XD</p>
                     <p>Figma</p>
                 </div>
             </div>
-            <div class="skills">
+            <div id="skills" class="grid-2">
                 <h3>This is my trusty Developer Stack</h3>
-                <div class="stack">
+                <div id="stack" class="subgrid">
                     <p><i class="fab fa-html5" style="color: #fd6529;font-size: 2em;"></i>HTML</p>
                     <p><i class="fab fa-css3-alt" style="color: #0074b9;font-size: 2em;"></i>CSS</p>
                     <p><i class="fab fa-js-square" style="color: #f0db4f;font-size: 2em;"></i>JavaScript</p>
@@ -116,5 +116,9 @@
                 </div>
             </div>
         </div>
+    </section>
+
+    <section id="projects-section" class="grid-section">
+        <h1>My Projects</h1>
     </section>
 </div>
