--- a/src/styles.scss
+++ b/src/styles.scss
@@ -33,6 +33,7 @@ $lustys-portfolio-theme: mat-light-theme(
       accent: $lustys-portfolio-accent,
       warn: $lustys-portfolio-warn,
     ),
+    font-family: $lustys-portfolio-typography,
   )
 );
 
