--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -113,85 +113,95 @@
         }
     }
 
-    .tools-section {
-        h1 {
-            text-align: center;
-            grid-column-start: 1;
-            grid-column-end: 3;
-        }
-    }
-
-    .tools {
-        width: 100vw;
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-
-        @include xs {
-            overflow-x: scroll;
-        }
-
-        p {
-            text-align: center;
-            i {
-                width: 32px;
-            }
-        }
-        h3 {
-            font-size: 1.5em;
-            text-align: center;
-        }
-
+    .grid-section {
         h1 {
             text-align: center;
             grid-column-start: 1;
             grid-column-end: 3;
         }
 
-        .products {
-            grid-column-start: 1;
-            padding: 3em;
-            color: white;
-            font-size: 1rem;
-
-            @include xs {
-                font-size: 0.8rem;
-                font-weight: 600;
-                padding: 0.5em;
-            }
-            background-color: rgb(78, 73, 73);
-            .apps {
-                margin-top: 2em;
+        .grid-body {
+            width: 100vw;
+            @include edge-max {
                 display: grid;
                 grid-template-columns: 1fr 1fr;
+            }
+
+            @include xs {
+                display: grid;
+                // overflow-x: scroll;
+                // grid-template-columns: none;
                 grid-template-rows: 1fr 1fr;
+            }
 
-                p {
-                    padding: 1em;
+            p {
+                text-align: center;
+                i {
+                    width: 32px;
                 }
             }
-        }
-        .skills {
-            grid-column-start: 2;
-            padding: 3em;
-            color: rgb(78, 73, 73);
-            font-size: 1rem;
-
-            @include xs {
-                font-size: 0.8rem;
-                font-weight: 600;
-                padding: 0.5em;
+            h3 {
+                font-size: 1.5em;
+                text-align: center;
             }
-            .stack {
-                display: grid;
-                margin-top: 2em;
-                grid-template-columns: 1fr 1fr;
-                grid-template-rows: 1fr 1fr 1fr;
 
-                p {
-                    padding: 1em;
-                    text-align: start;
+            h1 {
+                text-align: center;
+                grid-column-start: 1;
+                grid-column-end: 3;
+            }
+
+            .grid-1 {
+                // grid-column-start: 1;
+                padding: 3em;
+                color: white;
+                font-size: 1rem;
+
+                @include xs {
+                    font-size: 0.8rem;
+                    font-weight: 600;
+                    grid-row-start: 1;
+                    grid-row-end: 2;
+                    padding: 0.5em;
+                }
+                background-color: rgb(78, 73, 73);
+                .subgrid {
+                    margin-top: 2em;
+                    display: grid;
+                    grid-template-columns: 1fr 1fr;
+                    grid-template-rows: 1fr 1fr;
+
+                    p {
+                        padding: 1em;
+                    }
+                }
+            }
+            .grid-2 {
+                // grid-column-start: 2;
+                padding: 3em;
+                color: rgb(78, 73, 73);
+                font-size: 1rem;
+
+                @include xs {
+                    font-size: 0.8rem;
+                    font-weight: 600;
+                    padding: 0.5em;
+                }
+                .subgrid {
+                    display: grid;
+                    margin-top: 2em;
+                    grid-template-columns: 1fr 1fr;
+                    grid-template-rows: 1fr 1fr 1fr;
+
+                    p {
+                        padding: 1em;
+                        text-align: start;
+                    }
                 }
             }
         }
     }
+
+
+
 }
