--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -207,8 +207,7 @@
 
     <!--自己初回-->
     <div class="tagline">
-        <p>Web developer and</p>
-        <p>Graphics designer</p>
+        <p>Product Designer</p>
     </div>
 
     <!--Bottom nav balls-->
