updates to the about and projects section

--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -1,4 +1,6 @@
 <div id="about" class="body">
+    <button mat-fab routerLink="" color="accent"><i class="fas fa-home fa-2x"></i></button>
+
     <header>
         <h1>Hi! I'm Akpos</h1>
     </header>
@@ -98,10 +100,10 @@
             <div id="products" class="grid-1">
                 <h3>These are the products and programs that help me make Wonderful websites</h3>
                 <div id="apps" class="subgrid">
-                    <p>VS Code</p>
-                    <p>Adobe Illustrator</p>
-                    <p>Adobe XD</p>
-                    <p>Figma</p>
+                    <p><span style="color: #0074b9;">VS</span> Code</p>
+                    <p><span style="color: #fd6529;">Adobe</span> Illustrator</p>
+                    <p>Adobe <span style="color: #800080;">XD</span></p>
+                    <p>Fig<span style="color: aqua;">ma</span></p>
                 </div>
             </div>
             <div id="skills" class="grid-2">
@@ -118,7 +120,4 @@
         </div>
     </section>
 
-    <section id="projects-section" class="grid-section">
-        <h1>My Projects</h1>
-    </section>
 </div>
