--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -214,12 +214,12 @@
     <div class="navi">
         <ul>
             <li matTooltip="Home" matTooltipPosition="left"><a href="#"><img src="../assets/SVG/green-ball.svg"
-                        alt=""></a>
+                        alt=""></a>Home
             </li>
-            <li matTooltip="About" matTooltipPosition="left" matTooltipTouchGestures="on"><a href="#about"> <img
-                        src="../assets/SVG/red-ball.svg" alt="home indicator"></a></li>
-            <li matTooltip="Projects" matTooltipPosition="left" matTooltipTouchGestures="on"><a href="#"><img
-                        src="../assets/SVG/indigo-ball.svg" alt="home indicator"></a></li>
+            <li matTooltip="About" matTooltipPosition="left" matTooltipTouchGestures="on"><a  routerLink="about"> <img
+                        src="../assets/SVG/red-ball.svg" alt="home indicator" ></a>About me</li>
+            <li matTooltip="Projects" matTooltipPosition="left" matTooltipTouchGestures="on"><a  routerLink="projects"><img
+                        src="../assets/SVG/indigo-ball.svg" alt="home indicator"></a>Projects</li>
         </ul>
     </div>
 
