--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -4,7 +4,7 @@
 .body {
     position: relative;
     width: 100vw;
-    height: max-content;
+    height: 100vh;
     margin-bottom: 2em;
     color: white;
     background: black;
