site hosting update

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -213,7 +213,7 @@
     <!--Bottom nav balls-->
     <div class="navi">
         <ul>
-            <li matTooltip="Home" matTooltipPosition="left"><a href="#"><img src="../assets/SVG/green-ball.svg"
+            <li matTooltip="Home" matTooltipPosition="left" [@swing] = " 'stop' "><a href="#"><img src="../assets/SVG/green-ball.svg"
                         alt=""></a>Home
             </li>
             <li matTooltip="About" matTooltipPosition="left" matTooltipTouchGestures="on"><a  routerLink="about"> <img
