--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -3,6 +3,7 @@
         <button mat-fab routerLink="" color="accent"><i class="fas fa-home fa-2x"></i></button>
     </header>
 
+    <!-- Lusty's World -->
     <div class="project">
         <div class="text">
             <h1>Lusty's Minecraft World</h1>
@@ -20,6 +21,8 @@
             <!-- <img src="../../assets/lmw.png" alt=""> -->
         </div>
     </div>
+
+    <!-- Credit Card Manager -->
     <div class="project">
         <div class="text">
             <h1>Credit card Manager demo</h1>
@@ -34,20 +37,24 @@
             <iframe src="" frameborder="0"></iframe>
         </div>
     </div>
+
+    <!-- SMPLive -->
     <div class="project">
         <div class="text">
             <h1>SMPLive</h1>
             <p>SMPLive is a web resource I built to host information about various Minecraft SMP servers such as Dream
-                SMP, Origins SMP and an existing server of the same name(no affiliation) SMP Live.
+                SMP, Origins SMP and Epic SMP.
                 The site hosts information on the lore of some of the SMPs and the players on it. </p>
             <div class="btn-list">
-                <p>Check out the site<a><i class="fas fa-external-link-alt"></i></a></p>
+                <p>Check out the site<a href="https://smplive.netlify.app"><i class="fas fa-external-link-alt"></i></a></p>
             </div>
         </div>
         <div class="preview">
-            <iframe src="" frameborder="0"></iframe>
+            <iframe src="https://smplive.netlify.app" frameborder="0"></iframe>
         </div>
     </div>
+
+    <!-- SLDB -->
     <div class=" project ">
         <div class="text">
             <h1>SLDB</h1>
