--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -37,7 +37,7 @@
             width: 70%;
             height: 120%;
             top: -0.1em;
-            background: $red;
+            background: $jungle;
             @include xs {
                 width: 50%;
             }
