--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -23,7 +23,7 @@
     </div>
 
     <!-- Credit Card Manager -->
-    <div class="project">
+    <!-- <div class="project">
         <div class="text">
             <h1>Credit card Manager demo</h1>
             <p>The credit card manager was built to hone my skills in Angular state management and was given to me by a
@@ -36,7 +36,7 @@
         <div class="preview">
             <iframe src="" frameborder="0"></iframe>
         </div>
-    </div>
+    </div> -->
 
     <!-- SMPLive -->
     <div class="project">
