--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -1,5 +1,5 @@
 <div id="about" class="body">
-    <button mat-fab routerLink="" color="accent"><i class="fas fa-home fa-2x"></i></button>
+        <a href="#"><img src="../../favicon.ico" alt="" style="width: 128px; padding: 1em;" matTooltip="Return to home" matTooltipPosition="right"></a>
 
     <header>
         <h1>Hi! I'm Akpos</h1>
