--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,29 +1,51 @@
-<div class="body">
+<!-- <div class="body">
     <header>
-        <button mat-fab routerLink="" color="accent"><i class="fas fa-home fa-2x"></i></button>
-    </header>
+        <a href="#"><img src="../../favicon.ico" alt="" style="width: 128px; padding: 1em;" matTooltip="Return to home" matTooltipPosition="right"></a>
+    </header> -->
 
-    <!-- Lusty's World -->
-    <div class="project">
+<!-- Lusty's World -->
+<!-- <div class="project">
         <div class="text">
             <h1>Lusty's Minecraft World</h1>
             <p>Lusty's Minecraft World is a website that showcases the minecraft server owned by myself, that others can
                 join and play together.
                 It was built using only Angular and ngx-bootstrap for styling and other functionality. It was fun to
                 make as a personal project. </p>
+            <section class="tech">
+                <div>
+                    <p>HTML: <mat-progress-bar mode="determinate" value={{htmlValue}}></mat-progress-bar>
+                    </p>
+                </div>
+                <div>
+                    <p>CSS: <mat-progress-bar mode="determinate" value={{cssValue}}></mat-progress-bar>
+                    </p>
+                </div>
+                <div>
+                    <p>TypeScript<mat-progress-bar mode="determinate" value={{TSValue}}></mat-progress-bar>
+                    </p>
+                </div>
+            </section>
+
+            <section class="integration">
+                <div>
+                    <p>
+                        Discord
+                    </p>
+                </div>
+            </section>
             <div class="btn-list">
                 <p>Check out the site<a href="https://rolexlusty.netlify.app" target="_blank"><i
                             class="fas fa-external-link-alt"></i></a></p>
             </div>
         </div>
         <div class="preview">
-            <iframe src="https://rolexlusty.netlify.app" frameborder="0"></iframe>
-            <!-- <img src="../../assets/lmw.png" alt=""> -->
-        </div>
-    </div>
+            <iframe src="https://rolexlusty.netlify.app" frameborder="0"></iframe> -->
+<!-- <img src="../../assets/lmw.png" alt=""> -->
+<!-- </div>
+    </div> -->
 
-    <!-- Credit Card Manager -->
-    <!-- <div class="project">
+<!-- Credit Card Manager -->
+<!-- <div class="project">
         <div class="text">
             <h1>Credit card Manager demo</h1>
             <p>The credit card manager was built to hone my skills in Angular state management and was given to me by a
@@ -38,24 +60,39 @@
         </div>
     </div> -->
 
-    <!-- SMPLive -->
-    <div class="project">
+<!-- SMPLive -->
+<!-- <div class="project">
         <div class="text">
             <h1>SMPLive</h1>
             <p>SMPLive is a web resource I built to host information about various Minecraft SMP servers such as Dream
                 SMP, Origins SMP and Epic SMP.
                 The site hosts information on the lore of some of the SMPs and the players on it. </p>
+            <section class="tech">
+                <div>
+                    <p>HTML: <mat-progress-bar mode="determinate" value={{htmlValue}}></mat-progress-bar>
+                    </p>
+                </div>
+                <div>
+                    <p>CSS: <mat-progress-bar mode="determinate" value={{cssValue}}></mat-progress-bar>
+                    </p>
+                </div>
+                <div>
+                    <p>TypeScript<mat-progress-bar mode="determinate" value={{TSValue}}></mat-progress-bar>
+                    </p>
+                </div>
+            </section>
             <div class="btn-list">
-                <p>Check out the site<a href="https://smplive.netlify.app"><i class="fas fa-external-link-alt"></i></a></p>
+                <p>Check out the site<a href="https://smplive.netlify.app"><i class="fas fa-external-link-alt"></i></a>
+                </p>
             </div>
         </div>
         <div class="preview">
             <iframe src="https://smplive.netlify.app" frameborder="0"></iframe>
         </div>
-    </div>
+    </div> -->
 
-    <!-- SLDB -->
-    <div class=" project ">
+<!-- SLDB -->
+<!-- <div class=" project ">
         <div class="text">
             <h1>SLDB</h1>
             <p>SLDB(Service Life Database) is a website I built as a commision with a friend and partner of mine <a
@@ -68,6 +105,20 @@
                 The project was completed successfully and two versions of it ended up being developed, one in Vue(@Femi
                 Black) and one in Angular(Me) with the backend for both developed by @Femi Black
             </p>
+            <section class="tech">
+                <div>
+                    <p>HTML: <mat-progress-bar mode="determinate" value={{htmlValue}}></mat-progress-bar>
+                    </p>
+                </div>
+                <div>
+                    <p>CSS: <mat-progress-bar mode="determinate" value={{cssValue}}></mat-progress-bar>
+                    </p>
+                </div>
+                <div>
+                    <p>TypeScript<mat-progress-bar mode="determinate" value={{TSValue}}></mat-progress-bar>
+                    </p>
+                </div>
+            </section>
             <div class="btn-list">
                 <p>Check out the site<a href="https://sldb.herokuapp.com" target="_blank"><i
                             class="fas fa-external-link-alt"></i></a></p>
@@ -77,4 +128,42 @@
             <iframe src="https://sldb.herokuapp.com" frameborder="0"></iframe>
         </div>
     </div>
-</div>
+</div> -->
+
+<body>
+    <header>
+        <a href="#"><img src="../../favicon.ico" alt="" style="width: 128px; padding: 1em;" matTooltip="Return to home"
+                matTooltipPosition="right"></a>
+        <h1><span>P</span><span>R</span><span>O</span><span>J</span><span>E</span><span>C</span><span>T</span><span>S</span></h1>
+    </header>
+    <section class="pro-card lmw">
+        <a href="">
+            <div class="overlay">
+                <p>Lustys Minecraft World</p>
+            </div>
+        </a>
+    </section>
+    <section class="pro-card smp">
+        <a href="">
+            <div class="overlay">
+                <p>SMPLive</p>
+            </div>
+        </a>
+    </section>
+    <section class="pro-card isyms">
+        <a href="https://isyms.tech" target="_blank">
+            <div class="overlay">
+                <p>ISyMS</p>
+            </div>
+        </a>
+    </section>
+
+    <!-- <ng-container *ngTemplateOutlet="smp">
+
+    </ng-container> -->
+
+    <ng-template #smp>
+        <h1>Finishing touch</h1>
+    </ng-template>
+
+</body>
