--- a/src/app/projects/projects.component.scss
+++ b/src/app/projects/projects.component.scss
@@ -1,16 +1,15 @@
 @import "../../assets/shared.scss";
 @import "../../assets/media-query.scss";
 
-.body {
+body {
     $parsearea: 100vh;
     width: 100vw;
-    height: max-content;
-    padding: 2px;
-    background: radial-gradient(circle, rgba(58, 19, 73, 0.685), rgb(20, 5, 26));
+    height: 100%;
     font-family: "Bungee";
     /* IE and Edge */
     -ms-overflow-style: none;
     scrollbar-width: none;
+    scroll-behavior: smooth;
 
     button {
         margin-left: 2em;
@@ -20,14 +19,42 @@
     h1 {
         font-family: Bungee Shade;
         letter-spacing: 0.1em;
+        text-align: center;
+        
+        // span{
+        //     margin: 0;
+        //     animation: stretch 1.8s  cubic-bezier(0.92, 0, 0.57, 0.34);
+        //     font-size: 60px;
+        //     background: $jungle;
+        //     border-radius: 30px;
+        //     padding: 16px;
+        // }
+
     }
 
     p {
         letter-spacing: 0.1em;
         line-height: 2em;
     }
+
+    header {
+        height: max-content;
+        // margin-bottom: 1em;
+        text-align: center;
+        padding: 8px;
+
+        h1 {
+            font-size: 45px;
+            margin: 0;
+        }
+
+        a {
+            display: flex;
+            width: min-content;
+        }
+    }
 }
-.body ::-webkit-scrollbar {
+body ::-webkit-scrollbar {
     display: none;
 }
 
@@ -36,12 +63,12 @@
 }
 
 .project {
-    color: $green;
+    color: $jungle;
     height: 70vh;
     display: flex;
     text-align: center;
     align-items: center;
-    justify-content: center;
+    justify-content: space-evenly;
     margin: 4em 0 10em;
 
     @include xs {
@@ -72,13 +99,21 @@
     }
 
     .text {
+        .tech {
+            p {
+                padding: 10px;
+            }
+            .mat-progress-bar {
+                width: 60%;
+            }
+        }
         p {
             @include xs {
                 margin: auto;
                 width: 300px;
                 padding: 20px 0;
             }
-
+            text-align: justify;
             @include sm {
                 margin: auto;
                 width: auto;
@@ -93,7 +128,7 @@
     }
 
     .preview {
-        perspective: 1000px;
+        // perspective: 1000px;
         width: auto;
 
         @include xs {
@@ -102,17 +137,17 @@
         }
 
         @include sm {
-            margin-bottom: 3em;
+            // margin-bottom: 3em;
             perspective: none;
         }
         img {
             // transform: skewY(20deg);
             // transform: skewY(40deg);
-            transform: rotateY(-30deg) skewY(8deg);
+            // transform: rotateY(-30deg) skewY(8deg);
             // transform-style: preserve-3d;
             width: 400px;
             height: 400px;
-            box-shadow: 30px -20px 5px rgba(0, 0, 0, 1);
+            // box-shadow: 30px -20px 5px rgba(0, 0, 0, 1);
             backdrop-filter: drop-shadow();
 
             @include xs {
@@ -121,21 +156,21 @@
             }
 
             @include sm {
-                transform: none;
+                // transform: none;
             }
         }
 
         iframe {
             // transform: skewY(20deg);
             // transform: skewY(40deg);
-            transform: rotateY(-30deg) skewY(8deg);
-            transform-style: preserve-3d;
+            // transform: rotateY(-30deg) skewY(8deg);
+            // transform-style: preserve-3d;
             width: 400px;
             height: 400px;
-            box-shadow: 30px -20px 5px rgba(0, 0, 0, 0.7);
-            backdrop-filter: drop-shadow();
+            // box-shadow: 30px -20px 5px rgba(0, 0, 0, 0.7);
+            // backdrop-filter: drop-shadow();
             border: $jungle solid 3px;
-            border-radius: 20px;
+            border-radius: 10px;
 
             @include xs {
                 width: 200px;
@@ -144,9 +179,100 @@
             }
 
             @include sm {
-                transform: none;
-                transform-style: flat;
+                // transform: none;
+                // transform-style: flat;
             }
         }
+    }
+}
+
+.pro-card {
+    width: 70%;
+    height: 70%;
+    margin: 48px auto;
+    border-radius: 10px;
+
+    a{
+        text-decoration: none;
+    }
+}
+
+.lmw {
+    background: url(../../assets/1x/lmw.png);
+    background-repeat: no-repeat;
+    background-position-y: -0px;
+    background-size: cover;
+
+    :hover{
+        background-size: 10em;
+    }
+}
+.smp {
+    background: url(../../assets/1x/smplive.png);
+    background-repeat: no-repeat;
+    background-position-y: -0px;
+    background-size: cover;
+}
+.isyms {
+    background: url(../../assets/1x/isyms.png);
+    background-repeat: no-repeat;
+    background-position-y: -0px;
+    background-size: cover;
+}
+
+.overlay {
+    width: 100%;
+    display: flex;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.555);
+    border-radius: 10px;
+    align-items: center;
+    justify-items: center;
+    // backdrop-filter: brightness(-5);
+
+    :hover{
+        background-size: 10em;
+    }
+    position: relative;
+    p {
+        // position: absolute;
+        // bottom: 0;
+        // left: 25%;
+        color: white;
+        border-bottom-right-radius: 10px;
+        border-bottom-left-radius: 10px;
+        text-align: center;
+        // background: rgba(0, 0, 0, 0.8);
+        width: 100%;
+        font-size: 3rem;
+        margin: auto;
+    }
+}
+
+@keyframes stretch {
+    0%{
+        margin: 0;
+    }
+
+    75%{
+        margin: 0 .2em;
+    }
+
+    100%{
+        margin: 0;
+    }
+}
+
+@keyframes box {
+    0%{
+        width: 0;
+    }
+
+    75%{
+        width: .6em;
+    }
+
+    100%{
+        width: 0;
     }
 }
