--- a/src/assets/shared.scss
+++ b/src/assets/shared.scss
@@ -20,6 +20,42 @@ $laptops: (
     max: 1080,
 );
 
+/* For use in src/lib/core/theming/_palette.scss */
+$green-palette: (
+    50 : #e9f7ef,
+    100 : #c8ead7,
+    200 : #a3dcbd,
+    300 : #7ecea2,
+    400 : #63c48e,
+    500 : #47b97a,
+    600 : #40b272,
+    700 : #37aa67,
+    800 : #2fa25d,
+    900 : #20934a,
+    A100 : #cfffdf,
+    A200 : #9cffbd,
+    A400 : #69ff9c,
+    A700 : #4fff8b,
+    contrast: (
+        50 : #000000,
+        100 : #000000,
+        200 : #000000,
+        300 : #000000,
+        400 : #000000,
+        500 : #000000,
+        600 : #000000,
+        700 : #ffffff,
+        800 : #ffffff,
+        900 : #ffffff,
+        A100 : #000000,
+        A200 : #000000,
+        A400 : #000000,
+        A700 : #000000,
+    )
+);
+
+
+
 .center-image-normal {
     .cls-5 {
         fill: $red;
